# cetus_rust

./: .env.example  .gitignore  Cargo.toml  diesel.toml  rustfmt.toml
cetus_api/: Cargo.toml
cetus_api/src/: api.rs  login.rs  main.rs  repository.rs
cetus_data/: Cargo.toml
cetus_domain/: Cargo.toml
cetus_domain/src/: lib.rs  profile.rs  schema.rs  user.rs
cetus_github/: Cargo.toml
cetus_github/src/: client.rs  lib.rs  profile.rs  repository.rs
migrations/2021-12-15-002111_create-users-table/: down.sql  up.sql
src/: main.rs  profile.rs  repo.rs
